--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,4 @@
-@import "primeng/resources/themes/lara-dark-purple/theme.css";
-@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
 
 @tailwind base;
 @tailwind components;
