--- a/client/src/app/features/home/home.component.html
+++ b/client/src/app/features/home/home.component.html
@@ -49,7 +49,24 @@
         >
           {{ category }}
         </h2>
-        <div class="flex gap-6 overflow-x-auto pb-4 -mb-4">
+        <p-carousel
+          class="meu-carrossel-customizado hidden md:block"
+          [value]="groupedProducts[category]"
+          [responsiveOptions]="responsiveOptions"
+          [numVisible]="5"
+          [numScroll]="1"
+          [showNavigators]="true"
+          [showIndicators]="false"
+        >
+          <ng-template let-product pTemplate="item">
+            <div class="px-3 py-1">
+              <app-product-card [product]="product"></app-product-card>
+            </div>
+          </ng-template>
+        </p-carousel>
+
+        <!-- Mobile -->
+        <div class="flex gap-6 overflow-x-auto pb-4 -mb-4 md:hidden">
           <div
             *ngFor="let product of groupedProducts[category]"
             class="w-64 flex-shrink-0"
