--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -11,7 +11,7 @@
 
 body {
   margin: 0;
-  padding: 2rem 1rem;
+  padding: 0;
   font-family: $font-family-base;
   background-color: $bg-color-light;
   color: $text-color-light;
