--- a/client/src/app/pages/search/search.component.html
+++ b/client/src/app/pages/search/search.component.html
@@ -1,15 +1,14 @@
 <div class="search-page-container">
-  <h1 *ngIf="searchTerm$ | async as term">
+  <h1 *ngIf="searchTerm as term">
     Resultados para "{{ term }}"
   </h1>
-  <h1 *ngIf="!(searchTerm$ | async)">
+  <h1 *ngIf="!searchTerm">
     Digite um termo para buscar
   </h1>
 
   <div *ngIf="isLoading" class="loading-spinner">Buscando...</div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
 
-  <app-product-list *ngIf="!isLoading && !error" [products]="(searchResults$ | async) ?? []">
-  </app-product-list>
+  <app-product-list *ngIf="!isLoading && !error" [products]="searchResults" />
 
 </div>
