fix: corrigir components e pages de products

--- a/client/src/app/components/product-card/product-card.component.html
+++ b/client/src/app/components/product-card/product-card.component.html
@@ -13,7 +13,7 @@
         <div class="button-group">
           <button class="btn btn--primary" [ngClass]="getButtonHoverClass(theme)">Comprar Agora</button>
           <button class="btn btn--secondary" (click)="toggleFavorite($event)" [ngClass]="getButtonHoverClass(theme)" [class.is-favorite]="isFavorite">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa fa-heart"></i>
           </button>
         </div>
       </div>
