--- a/client/src/app/pages/search/search.component.html
+++ b/client/src/app/pages/search/search.component.html
@@ -9,6 +9,6 @@
   <div *ngIf="isLoading" class="loading-spinner">Buscando...</div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
 
-  <app-product-list *ngIf="!isLoading && !error" [products]="searchResults" />
+  <app-product-grid *ngIf="!error" [products]="searchResults" [isLoading]="isLoading" />
 
 </div>
